--- a/style.css
+++ b/style.css
@@ -4,10 +4,20 @@ html{
     scroll-behavior: smooth;
 }
 
-
-body {
-
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    max-width: 100%;
 }
+
+
+.randomMovieBody{
+    background-image: url("images/movies2.jpg");
+    width: 100%;
+    height: 100%;
+}
+
 .homeImage{
     background: linear-gradient(to right, #053177 , #6e9ce5);
 }
@@ -38,19 +48,6 @@ body {
     src: url(fonts/SF-Pro-Display-Medium.otf);
 }
 
-.sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    display: inline-block;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-}
 
 #spanNavIdOne {
     position: absolute;
@@ -91,37 +88,6 @@ body {
 .material-icons:hover {
     color: red;
     z-index: 2001;
-}
-
-.sidenav a {
-    padding: 20px 5px 20px 0;
-    text-decoration: none;
-    font-family: "SF Pro Display";
-    font-size: 20px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-    text-align: center;
-}
-
-.sidenav a:hover {
-    color: white;
-    background-color: red;
-    margin: 5px 5px 5px 5px;
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-    padding: 0;
-}
-
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
 }
 
 .share{
@@ -485,11 +451,106 @@ header h1 {
     font-size: 80px;
 }
 
-p{
-    text-align: center;
+.overviewText{
+    text-align: left;
+    text-indent: 40px;
     color: black;
+    font-family: "Helvetica";
+    font-size: 17px;
+    padding: 30px;
+    vertical-align: middle;
+    display: table-cell;
+}
+
+.overviewDiv{
+    width: fit-content;
+    height: fit-content;
+    display: -webkit-inline-box;
+    margin: auto;
+}
+
+.overviewTitle{
+
+    padding-left: 50px;
+    margin-top: 10px;
+    font-family: helvetica;
+    font-weight: 400;
+}
+
+.modal-dialog{
+max-width: 600px !important;
+    background-color: #ffffff;
+}
+
+.modalDate{
     font-family: "SF Pro Display";
-    font-size: 30px;
+    color: #ffffff;
+}
+
+.modalTitle{
+    font-family: "SF Pro Display";
+    font-weight: bold;
+    padding-top: 20px;
+    color: #ffffff;
+}
+
+.modal-content{
+    height: auto;
+}
+
+#modalCloseBtn{
+    font-size: 25px;
+    font-weight: bold;
+    color: #ffffff;
+    position: absolute;
+    float: right;
+    right: 10px;
+}
+
+#modalCloseBtn2{
+    font-size: 25px;
+    font-weight: bold;
+    color: #ffffff;
+    position: absolute;
+    float: right;
+    right: 10px;
+}
+
+#modalCloseBtn3{
+    font-size: 25px;
+    font-weight: bold;
+    color: #ffffff;
+    position: absolute;
+    float: right;
+    right: 10px;
+}
+
+.modalHeader{
+    background-color: #33b5e5;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    border: 0;
+    text-align: center;
+}
+
+.modalHeader2{
+    background-color: #33b5e5;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    border: 0;
+}
+
+.modalHeader3{
+    background-color: #33b5e5;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    border: 0;
+}
+
+.movieRatings{
+
+    font-family: "Helvetica";
+    font-size: 18px;
+    text-align: left;
+
+
 }
 
 
@@ -541,27 +602,65 @@ p{
     text-indent: 50px;
 }
 
+
 .movieContainer {
+    width: 25%;
+    height: auto;
+    position: relative;
+    margin: 0 auto;
+    border-color: black;
+    border-radius: 10px;
+    align-content: center;
+    text-align: center;
+    display: block;
+    background-color: #ffffff;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+}
+
+.movieContainer img{
     width: 100%;
-    height: 550px;
+    height: auto;
+    margin: 0 auto;
+    opacity: 1;
+    position: relative;
+    z-index: 2;
+    display: block;
+    border-radius: 10px;
+}
+
+#movieImg:hover{
+    opacity: 0.9;
+}
+
+.randomMovieContainer{
+    width: 100%;
+    height: 500px;
+    padding-top: 20px;
     position: relative;
     border-color: black;
     border-radius: 10px;
     align-content: center;
     text-align: center;
     display: block;
-    background-image: url("images/movies2.jpg");
     background-size: 100%;
 }
 
-.movieContainer img {
-    width: 25%;
-    height: auto;
-    margin: 0 auto;
-    opacity: 1;
-    position: relative;
-    z-index: 2;
+.randomMovieContainer img{
+    display: inline-block;
 }
+
+.randomMovieContainer .movieContainer{
+    position: relative;
+    display: inline-block;
+    /* if you need ie6/7 support */
+    *display: inline;
+    zoom: 1;
+}
+
+/*#movieImg:hover {*/
+
+    /*background-color: rgba(0, 0, 0, 0.5);*/
+/*}*/
 
 
 .movieContainer span {
@@ -596,23 +695,28 @@ p{
 }
 
 .tvContainer {
-    width: 100%;
-    height: 550px;
+    width: 25%;
+    height: auto;
     position: relative;
+    margin: 0 auto;
     border-color: black;
     border-radius: 10px;
     align-content: center;
     text-align: center;
     display: block;
+    background-color: #ffffff;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
 }
 
 .tvContainer img {
-    width: 25%;
+    width: 100%;
     height: auto;
     margin: 0 auto;
     opacity: 1;
     position: relative;
     z-index: 2;
+    display: block;
+    border-radius: 10px;
 }
 
 .tvContainer ul {
@@ -647,45 +751,159 @@ p{
 }
 
 .randomButtonDiv {
-    position: relative;
-
+    padding-top: 40px;
 }
 
 .md-form label.active {
     font-size: 15px;
 }
 
-.randomMovieContainer{
-    width: 100%;
-    height: 550px;
-    position: relative;
-    border-color: black;
-    border-radius: 10px;
-    align-content: center;
-    text-align: center;
-    display: block;
-}
-
 .welcomeIntro{
 
-    position: absolute;
     z-index: 200;
     color: #ffffff;
     left: 30%;
-    margin-top: 50px;
     font-size: 40px;
     font-family: "SF Pro Display";
 }
 
 .randomTvContainer{
     width: 100%;
-    height: 550px;
-    position: relative;
+    height: 500px;
+    padding-top: 20px;
     border-color: black;
     border-radius: 10px;
     align-content: center;
     text-align: center;
     display: block;
-    background-image: url("images/tvBackground.jpg");
     background-size: 100%;
+}
+
+.randomTvBody{
+    background-image: url("images/tvBackground.jpg");
+}
+
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    transition: 0.5s;
+    background-image: url("images/building.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #000000;
+    display: block;
+    transition: 0.3s;
+}
+
+
+
+.sidenav .closebtn {
+    position: relative;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    width: fit-content;
+    float: right;
+
+}
+
+.sidenav .closebtn:hover{
+    width: auto;
+    color: #ff0000;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav a {font-size: 18px;}
+}
+
+#link1:hover{
+    background-color: rgba(0, 0, 0, .1);
+    width: 100%;
+}
+
+#link2:hover{
+    background-color: rgba(0, 0, 0, .1);
+    width: 100%;
+}
+
+#link3:hover{
+    background-color: rgba(0, 0, 0, .1);
+    width: 100%;
+}
+
+#link4:hover{
+    background-color: rgba(0, 0, 0, .1);
+    width: 100%;
+}
+
+#link1:hover{
+    background-color: rgba(0, 0, 0, .1);
+    width: 100%;
+}
+
+
+.sideNavLogo{
+    display: block;
+    width: 150px;
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+
+.backgroundOverlay{
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    position: absolute;
+}
+
+#personCard{
+    width: 22rem;
+    margin: 0 auto;
+    margin-top: 200px;
+}
+
+#personName{
+    font-family: "SF Pro Display";
+    font-size: 40px;
+}
+
+#firstSlide img{
+
+    margin: 10px;
+}
+
+#secondSlide img{
+    margin: 10px;
+}
+
+#thirdSlide img{
+
+    margin: 10px;
+}
+
+#fourthSlide img{
+
+    margin: 10px;
+}
+
+#fifthSlide img{
+
+    margin: 10px;
 }
