--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
     padding: 0;
     height: 100%;
     max-width: 100%;
-    background-color: #000000;
+    background-color: #4f5b66;
 }
 
 
