--- a/style.css
+++ b/style.css
@@ -5,11 +5,31 @@ html{
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    max-width: 100%;
-    background-color: #4f5b66;
+
+}
+
+
+a.waves-effect{
+    display: block;
+}
+
+a#newMovieWaves{
+    display: inline-block;
+}
+
+
+.carousel .carousel-control-prev-icon {
+
+    background-image: url("images/baseline-keyboard_arrow_left-24px.svg");
+}
+
+.carousel .carousel-control-next-icon {
+
+    background-image: url("images/arrow.svg");
+}
+
+.navbar.navbar-dark .navbar-nav .nav-item .nav-link:hover {
+    color: rgba(55, 84, 243, 0.75);
 }
 
 
@@ -20,7 +40,16 @@ html, body {
 }
 
 .homeImage{
-    background: linear-gradient(to right, #053177 , #6e9ce5);
+    position: relative;
+    width: 100%;
+    height: 600px;
+}
+
+.homeVideo{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -35px;
 }
 
 .homeText{
@@ -31,7 +60,8 @@ html, body {
 
 .homeText h1{
     text-align: center;
-    font-family: "SF-Pro-Display-Medium";
+    font-family: "Helvetica Neue";
+    font-weight: 600;
     font-size: 100px;
     text-shadow: 2px 2px 8px #0000009c;
     color: #ffffff;
@@ -42,6 +72,78 @@ html, body {
     font-family: "SF-Pro-Text-Semibold.otf";
     color: #ffffff;
     font-size: 20px;
+}
+
+#section07 a {
+    padding-top: 80px;
+}
+#section07 a span {
+    position: absolute;
+    top: 180px;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb07 2s infinite;
+    animation: sdb07 2s infinite;
+    opacity: 0;
+    box-sizing: border-box;
+}
+#section07 a span:nth-of-type(1) {
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+}
+#section07 a span:nth-of-type(2) {
+    top: 200px;
+    -webkit-animation-delay: .15s;
+    animation-delay: .15s;
+}
+#section07 a span:nth-of-type(3) {
+    top: 220px;
+    -webkit-animation-delay: .3s;
+    animation-delay: .3s;
+}
+@-webkit-keyframes sdb07 {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes sdb07 {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+
+.NewMoviesContainer{
+    width: 100%;
+    padding-bottom: 10px;
+    background-color: white;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+    margin-top: -60px;
+}
+
+.inTheatre{
+    padding-bottom: 20px;
+    padding-top: 20px;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-weight: 600;
 }
 
 @font-face {
@@ -290,35 +392,6 @@ hr p {
     src: url(fonts/SF-Pro-Text-Semibold.otf);
 }
 
-
-
-.contentOne {
-    position:relative;
-    bottom:50%;
-    width: 100%;
-    height:100%;
-    font-size:30px;
-    color:white;
-    background-color: rgba(0,0,0,0.2);
-    padding: 100px 100px 100px 100px;
-}
-
-
-.cardOne {
-
-    background: linear-gradient(to bottom, skyblue , white);;
-    margin: 0 auto;
-    color: black;
-    width: 50%;
-    height: auto;
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0 0 30px black;
-    border-radius: 10px;
-    opacity: 1;
-    animation: fade 2s linear;
-}
-
 .card-header {
     color: black;
 }
@@ -479,7 +552,7 @@ header h1 {
 }
 
 .modal-dialog{
-max-width: 600px !important;
+    max-width: 600px !important;
     background-color: #ffffff;
 }
 
@@ -629,10 +702,6 @@ max-width: 600px !important;
     border-radius: 10px;
 }
 
-#movieImg:hover{
-    opacity: 0.9;
-}
-
 .randomMovieContainer{
     width: 100%;
     height: 500px;
@@ -660,7 +729,7 @@ max-width: 600px !important;
 
 /*#movieImg:hover {*/
 
-    /*background-color: rgba(0, 0, 0, 0.5);*/
+/*background-color: rgba(0, 0, 0, 0.5);*/
 /*}*/
 
 
@@ -907,4 +976,132 @@ max-width: 600px !important;
 #fifthSlide img{
 
     margin: 10px;
+}
+
+#firstSlide1 img{
+    margin: 10px;
+}
+
+#secondSlide2 img{
+    margin: 10px;
+}
+
+#thirdSlide3 img{
+    margin: 10px;
+}
+
+#fourthSlide4 img{
+    margin: 10px;
+}
+
+#fifthSlide5 img{
+    margin: 10px;
+}
+
+
+
+.carousel-indicators li{
+    background-color: rgba(121, 121, 130, 0.5);
+}
+
+.introImageOne{
+    width: 100%;
+    height: 580px;
+    overflow: hidden;
+    margin-top: 20px;
+    position: relative;
+    background-image: url("images/starwars.jpg");
+    background-size: cover;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+
+}
+
+.introImageTwo{
+    width: 100%;
+    height: 580px;
+    margin-top: 20px;
+    background-image: url("images/got.jpg");
+    background-size: cover;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+}
+
+.introImageThree{
+    width: 100%;
+    height: 580px;
+    margin-top: 20px;
+    background-image: url("images/walle.jpg");
+    background-size: cover;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+}
+
+.randomNameSearchTitle{
+    padding-left: 3%;
+    margin-top: 15%;
+    color: #ffffff;
+    font-size: 80px;
+    z-index: 2;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px #0000009c;
+}
+
+
+.randomMoviesTitle{
+    padding-left: 3%;
+    margin-top: 25%;
+    color: #ffffff;
+    font-size: 80px;
+    z-index: 2;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px #0000009c;}
+
+.randomTvShowTitle{
+    padding-left: 51%;
+    margin-top: 15%;
+    color: #ffffff;
+    font-size: 80px;
+    z-index: 2;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px #0000009c;}
+
+.carousel-control-prev{
+    position: absolute;
+    top: 50%;
+    margin-left: 5%;
+    bottom: 0;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+    opacity: .5;
+    width: fit-content;
+    height: fit-content;
+}
+
+.carousel-control-next{
+    position: absolute;
+    top: 50%;
+    margin-right: 5%;
+    bottom: 0;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+    opacity: .5;
+    width: fit-content;
+    height: fit-content;
 }
