--- a/style.css
+++ b/style.css
@@ -39,10 +39,25 @@ a#newMovieWaves{
     height: 100%;
 }
 
-.homeImage{
-    position: relative;
-    width: 100%;
-    height: 650px;
+@media screen and (min-width: 601px ) {
+    .homeImage {
+        position: relative;
+        width: 100%;
+        height: 650px;
+        background-image: url("images/newBackground.jpg");
+        background-size: cover;
+    }
+}
+
+@media screen and (max-width: 600px ) {
+    .homeImage {
+        position: relative;
+        width: 100%;
+        height: 800px;
+        background-image: url("images/palmTrees.jpg");
+        background-size: cover;
+        background-position: center;
+    }
 }
 
 .homeVideo{
@@ -52,17 +67,47 @@ a#newMovieWaves{
     top: -35px;
 }
 
-.homeText{
-    position:absolute;
-    width: 100%;
-    top: 20%;
+
+@media screen and (min-width: 601px ) {
+    .homeText h1 {
+        position: absolute;
+        width: 100%;
+        top: 20%;
+        font-size: 100px;
+    }
+}
+
+@media screen and (min-width: 601px ) {
+    .homeText h6 {
+        position: absolute;
+        width: 100%;
+        top: 40%;
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 600px ) {
+    .homeText h1{
+        position: absolute;
+        width: 100%;
+        top: 20%;
+        font-size: 60px;
+    }
+}
+
+@media screen and (max-width: 600px ) {
+    .homeText h6 {
+        position: absolute;
+        width: 100%;
+        top: 30%;
+        font-size: 13px;
+    }
 }
 
 .homeText h1{
     text-align: center;
     font-family: "Helvetica Neue";
     font-weight: 600;
-    font-size: 100px;
     text-shadow: 2px 2px 8px #0000009c;
     color: #ffffff;
 }
@@ -71,15 +116,16 @@ a#newMovieWaves{
     text-align: center;
     font-family: "SF-Pro-Text-Semibold.otf";
     color: #ffffff;
-    font-size: 20px;
 }
 
 #section07 a {
     padding-top: 80px;
 }
+
+
 #section07 a span {
     position: absolute;
-    top: 180px;
+    top: 340px;
     left: 50%;
     width: 24px;
     height: 24px;
@@ -93,17 +139,19 @@ a#newMovieWaves{
     opacity: 0;
     box-sizing: border-box;
 }
+
+
 #section07 a span:nth-of-type(1) {
     -webkit-animation-delay: 0s;
     animation-delay: 0s;
 }
 #section07 a span:nth-of-type(2) {
-    top: 200px;
+    top: 360px;
     -webkit-animation-delay: .15s;
     animation-delay: .15s;
 }
 #section07 a span:nth-of-type(3) {
-    top: 220px;
+    top: 380px;
     -webkit-animation-delay: .3s;
     animation-delay: .3s;
 }
