--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a#newMovieWaves{
         position: relative;
         width: 100%;
         height: 800px;
-        background-image: url("images/palmTrees.jpg");
+        background-image: url("images/palmTrees2.jpg");
         background-size: cover;
         background-position: center;
     }
@@ -72,7 +72,7 @@ a#newMovieWaves{
     .homeText h1 {
         position: absolute;
         width: 100%;
-        top: 20%;
+        top: 30%;
         font-size: 100px;
     }
 }
@@ -81,7 +81,7 @@ a#newMovieWaves{
     .homeText h6 {
         position: absolute;
         width: 100%;
-        top: 40%;
+        top: 50%;
         font-size: 20px;
     }
 }
