--- a/style.css
+++ b/style.css
@@ -53,9 +53,8 @@ a#newMovieWaves{
     .homeImage {
         position: relative;
         width: 100%;
-        height: 800px;
+        height: 100%;
         background-image: url("images/palmTrees2.jpg");
-        background-size: cover;
         background-position: center;
     }
 }
