--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a#newMovieWaves{
         height: 750px;
         background-image: url("images/palmTrees2.jpg");
         background-position: center;
-        background-size: cover;
+        background-size: 500px;
     }
 }
 
